<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_create_new_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_white"
    tools:context=".CreateNewListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Grokart.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Grokart.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/tv_createNewList"
        android:text="@string/create_new_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Alternative_Main_Titles" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_storeItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewStoreItems"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/btn_viewStoreItems"
        android:layout_width="168dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:text="view store items"
        android:textSize="12sp"
        android:theme="@style/green_button"
        app:layout_constraintEnd_toStartOf="@+id/imgBtn_viewKart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nameYourKart" />

    <EditText
        android:id="@+id/et_nameYourKart"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/name_your_kart"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createNewList" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="27dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/et_nameYourKart"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createNewList"
        app:srcCompat="@drawable/ic_baseline_drive_file_rename_outline_24" />

    <ImageButton
        android:id="@+id/imgBtn_viewKart"
        android:layout_width="36dp"
        android:layout_height="37dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/grey_white"
        android:contentDescription="shopping_kart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_viewStoreItems"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalPrice"
        app:srcCompat="@drawable/ic_shopping_cart_whole"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/tv_totalPrice"
        android:layout_width="51dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total_Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_viewStoreItems"
        app:layout_constraintTop_toBottomOf="@+id/et_nameYourKart" />


</androidx.constraintlayout.widget.ConstraintLayout>