...
    <string name="settings">Settings</string>
    <string name="view_profile">Your Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to edit profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="preferred_store">Preferred Store</string>
    <string name="edit_response_success">Your profile has been successfully updated</string>
    <string name="edit_response_failure">Failed to update profile</string>
    <!-- Strings related to dashboard -->
...
    <string name="user_count_title">Users Count</string>
    <string name="store_count_title">Stores Count</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Create New Lists Page    -->
    <string name="name_your_kart">Name your Kart</string>
    <string name="view_your_kart">View your Kart</string>


    <!-- Strings related to View Previous Lists Page    -->
    <string name="view_prev_lists">My List History</string>
    <string name="info_btn">Kart Info</string>
...
